Add configuration for extra-java-module-info plugin
* should by default turn off modularization for test